# AI2_Lab2

./: LICENSE  answer.txt  command.txt  dataset.py  dream_play.py  eval.py  eval_dream.py  fl_V1.py  frozen_lake.py  game.py  human_play.py  pyproject.toml  train.py
4x4/: 4_game.py  dream_play_V1.py  eval_V1.py  fl_V1.py
model/: jepa.py
tb_logs/jepa/version_0/: events.out.tfevents.1746405519.LAPTOP-L1DMEBC2.22372.0
tb_logs/jepa/version_1/: events.out.tfevents.1746621710.LAPTOP-L1DMEBC2.28756.0
tb_logs/jepa/version_2/: events.out.tfevents.1746746076.LAPTOP-L1DMEBC2.23596.0
